src/css/base.scss
/* ... */
@mixin dc__striped-row($background) {
    background-color: $background;
}

.dc__striped-row {
    &:nth-child(odd) {
        @include dc__striped-row(var(--window-bg));

        .app-status__icon {
            @include dc__app-status-icon(var(--window-bg));
        }
    }

    &:nth-child(even) {
        @include dc__striped-row(white);

        .app-status__icon {
            @include dc__app-status-icon(white);
        }
    }

    &:hover {
        @include dc__striped-row(var(--B100));

        .app-status__icon {
            @include dc__app-status-icon(var(--B100));
        }
    }
}

.dc__app-summary__icon {
    @include dc__app-status-icon(transparent);

    &.icon-dim-20 {
        width: 20px;
        height: 20px;
    }

    &.icon-dim-16 {
        width: 16px;
        height: 16px;
    }
}

.ci-details__build-card {
    .app-status__icon {
        @include dc__app-status-icon(transparent);
    }
}

.dc__app-update-toast {
    font-size: 14px;

    .info {
        line-height: 1.43;
        color: var(--N000);
        font-size: 13px;
        text-transform: none;
    }

    button {
        outline: unset;
        border: unset;
        margin-left: auto;
        background: transparent;
        font-weight: 600;
        text-transform: uppercase;
        margin: 14px 0 0 auto;
    }
}

.gui-yaml-switch,
.manual-approvals-switch {
    &.radio-group {
        padding: 0;
        height: 24px;
        overflow: hidden;
        border-radius: 4px;

        input + .radio__item-label {
            border-radius: 0;
            border: 1px solid var(--N200);
        }

        input[type='checkbox']:checked + .radio__item-label {
            border-radius: 0;
            background-color: var(--N100);
            color: var(--N900);

            svg path {
                stroke: var(--N900);
            }
        }

        .radio {
            color: var(--N500);

            svg path {
                stroke: var(--N500);
            }

            &:hover:not(.disabled) {
                color: var(--N900);

                svg path {
                    stroke: var(--N900);
                }
            }

            .radio__item-label {
                border-right: unset;
            }

            &:first-child input + .radio__item-label {
                border-top-left-radius: 4px !important;
                border-bottom-left-radius: 4px !important;
            }

            &:last-child input + .radio__item-label {
                border-top-right-radius: 4px;
                border-bottom-right-radius: 4px;
                border: 1px solid var(--N200);
            }
        }

        input[type='checkbox']:checked + .radio__item-label {
            border-radius: 0;
            background-color: var(--N100);
            color: var(--N900);

            svg path {
                stroke: var(--N900);
            }
        }
    }
}

.gui-yaml-switch-window-bg {
    &.radio-group {
        padding: 0;
        height: 24px;
        overflow: hidden;
        border-radius: 4px;

        input + .radio__item-label {
            border-radius: 0;
            border: 1px solid var(--N200);
        }

        input[type='checkbox']:checked + .radio__item-label {
            border-radius: 0;
            color: var(--N900);
            background-color: var(--N0);

            svg path {
                stroke: var(--N900);
            }
        }

        .radio {
            background: var(--window-bg);
            color: var(--N500);

            svg path {
                stroke: var(--N500);
            }

            &:hover:not(.disabled) {
                color: var(--N900);

                svg path {
                    stroke: var(--N900);
                }
            }

            .radio__item-label {
                border-right: unset;
            }

            &:first-child input + .radio__item-label {
                border-top-left-radius: 4px !important;
                border-bottom-left-radius: 4px !important;
            }

            &:last-child input + .radio__item-label {
                border-top-right-radius: 4px;
                border-bottom-right-radius: 4px;
                border: 1px solid var(--N200);
            }
        }
    }
}

.gui-yaml-switch {
    &.radio-group {
        input[type='checkbox']:checked + .radio__item-label {
            color: var(--N900);

            svg path {
                stroke: var(--N900);
            }
        }

        .radio {
            color: var(--N500);

            svg path {
                stroke: var(--N500);
            }

            &:hover:not(.disabled) {
                color: var(--N900);

                svg path {
                    stroke: var(--N900);
                }
            }
        }
    }
}

.manual-approvals-switch {
    &.radio-group {
        input[type='checkbox']:checked + .radio__item-label {
            color: var(--N900);

            svg path {
                fill: var(--N900);
            }
        }

        input + .radio__item-label {
            padding: 4px 8px;
        }

        .radio {
            color: var(--N500);

            svg path {
                fill: var(--N500);
            }

            &:first-child input + .radio__item-label {
                border-top-left-radius: 4px !important;
                border-bottom-left-radius: 4px !important;
            }

            &:last-child input + .radio__item-label {
                border-top-right-radius: 4px !important;
                border-bottom-right-radius: 4px !important;
            }

            &:hover:not(.disabled) {
                color: var(--N900);

                svg path {
                    fill: var(--N900);
                }
            }
        }
    }
}

//Tippy

.tippy-box.default-tt {
    font-size: 12px;
    line-height: 1.6;
    border: 1px solid rgba(255, 255, 255, 0.4);
    background-color: var(--N900);
}
/* ... */

